feat(User): Super Admin should be able to create Users
- Create an endpoint to for a super admin to create users
- create an endpoint for Super delete users
- create an endpoint for superAdmin to get all users or a single user

[Delivers #166265859]
