# server/middleware/validation.js
@@ -1,4 +1,4 @@
-import { check, validationResult, param } from 'express-validator/check';
+import { check, validationResult, param, query } from 'express-validator/check';
 import util from '../helpers/utilities';
 
 const validate = {
@@ -54,21 +54,28 @@ const validate = {
         return next();
     },
   ],
-  signup : [
+
+  signup: [
     check('firstName')
       .not()
       .isEmpty({ ignore_whitespace: true })
-      .withMessage('First Name should not be left empty: Please input firstName')
+      .withMessage(
+        'First Name should not be left empty: Please input firstName'
+      )
       .isAlpha()
       .trim()
-      .withMessage('first Name can only contain letters: Please remove invalid characters'),
+      .withMessage(
+        'first Name can only contain letters: Please remove invalid characters'
+      ),
     check('lastName')
       .not()
       .isEmpty({ ignore_whitespace: true })
       .withMessage('Last name should not be left empty: Please input lastName')
       .isAlpha()
       .trim()
-      .withMessage('Last name can ony contain letters: remove invalid characters'),
+      .withMessage(
+        'Last name can ony contain letters: remove invalid characters'
+      ),
     check('email')
       .not()
       .isEmpty({ ignore_whitespace: true })
@@ -76,12 +83,29 @@ const validate = {
       .isEmail()
       .trim()
       .withMessage('Email is not valid: Please input a valid email address'),
+
+    (req, res, next) => {
+      const errors = validationResult(req);
+      const errMessages = [];
+      if (!errors.isEmpty()) {
+        errors.array({ onlyFirstError: true }).forEach(err => {
+          errMessages.push(err.msg);
+        });
+        return util.errorStatus(res, 400, errMessages);
+      }
+      return next();
+    }
+  ],
+
+  password: [
     check('password')
       .not()
       .isEmpty({ ignore_whitespace: true })
       .withMessage('Password should not be empty: Please input password')
-      .matches(/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]/, "i")
-      .withMessage('Password must contain at least one uppercase letter, one lowercase letter and one numeric digit')
+      .matches(/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])[0-9a-zA-Z]/, 'i')
+      .withMessage(
+        'Password must contain at least one uppercase letter, one lowercase letter and one numeric digit'
+      )
       .trim()
       .isLength({ min: 8 })
       .withMessage('Password Length should be at least 8 Characters'),
@@ -90,14 +114,15 @@ const validate = {
       const errors = validationResult(req);
       const errMessages = [];
       if (!errors.isEmpty()) {
-        errors.array({ onlyFirstError: true }).forEach((err) => {
+        errors.array({ onlyFirstError: true }).forEach(err => {
           errMessages.push(err.msg);
         });
         return util.errorStatus(res, 400, errMessages);
       }
       return next();
-    },
+    }
   ],
+
   addBook: [
     check('title')
       .not()
@@ -173,6 +198,7 @@ const validate = {
       return next();
     },
   ],
+
   author : [
     check('firstName')
       .not()
@@ -233,6 +259,29 @@ const validate = {
       }
       return next();
     },
+  ],
+
+  role: [
+    param('role')
+      .not()
+      .isEmpty({ ignore_whitespace: true })
+      .withMessage('role should not be left empty')
+      .isIn(['user', 'admin'])
+      .withMessage('Should be admin or user')
+      .isAlpha()
+      .trim(),
+
+    (req, res, next) => {
+      const errors = validationResult(req);
+      const errMessages = [];
+      if (!errors.isEmpty()) {
+        errors.array().forEach(err => {
+          errMessages.push(err.msg);
+        });
+        return util.errorStatus(res, 400, errMessages);
+      }
+      return next();
+    }
   ],
 
   id : [
@@ -311,7 +360,26 @@ const validate = {
       return util.errorStatus(res, 400, errMessages);
     }
     return next();
-  },  ]
+  },  ],
+
+  userId: [
+    query('userId')
+      .optional()
+      .isInt()
+      .withMessage('ID must be a number greater than 1'),
+
+    (req, res, next) => {
+      const errors = validationResult(req);
+      const errMessages = [];
+      if (!errors.isEmpty()) {
+        errors.array({ onlyFirstError: true }).forEach(err => {
+          errMessages.push(err.msg);
+        });
+        return util.errorStatus(res, 400, errMessages);
+      }
+      return next();
+    }
+  ]
 }
 
 export default validate;
